updated upstream server name to 'app' for nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ http
    index index.html;
    upstream app_servers
    {
-       server 3tier_app_1:8080;
+       server app:8080;
    }
 
    server
